# WDCS_Rust

./: .gitignore  README.md  client_exercies.txt
simple_client/: Cargo.toml  aggregated_price_of_btc_in_usd.txt
simple_client/src/: main.rs
tcp_communication/client/src/: main.rs
tcp_communication/client2/: Cargo.toml
tcp_communication/client2/src/: main.rs
tcp_communication/client3/: Cargo.toml
tcp_communication/client3/src/: main.rs
tcp_communication/server/src/: main.rs
tcp_simple_client/client/: Cargo.toml
tcp_simple_client/client/src/: main.rs
tcp_simple_client/client2/: Cargo.toml
tcp_simple_client/client2/src/: main.rs
tcp_simple_client/client3/: Cargo.toml
tcp_simple_client/client3/src/: main.rs
tcp_simple_client/server/: Cargo.toml
tcp_simple_client/server/src/: main.rs
tic-tac-toe/client/: Cargo.toml
tic-tac-toe/client/src/: main.rs
tic-tac-toe/server/: Cargo.toml
tic-tac-toe/server/src/: main.rs
