[package]
name = "simple_client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
tokio-tungstenite = { version = "*", features = ["tls"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.39"
rand = "0.8.5"
ed25519-dalek = "2.1.1"
clap = { version = "4.5.26" , features = ["derive"] }