[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26",features = ["derive"] }
ed25519-dalek = "2.1.1"
rand = "0.8.5"
serde = { version = "1.0.217",features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0",features = ["full"] }
tokio-tungstenite = "0.26.1"
